[BACK] improved the room endpoints for clarity and REST standards, also now the hotel id is included in auth response