@@ -1,6 +1,6 @@
 package com.hotelsa.backend.room.service;
 
-import com.hotelsa.backend.hotel.exception.HotelNotFoundException;
+import com.hotelsa.backend.auth.service.AuthService;
 import com.hotelsa.backend.hotel.model.Hotel;
 import com.hotelsa.backend.hotel.repository.HotelRepository;
 import com.hotelsa.backend.room.dto.RoomRequestDTO;
@@ -12,25 +12,18 @@ import com.hotelsa.backend.room.mapper.RoomMapper;
 import com.hotelsa.backend.room.model.Room;
 import com.hotelsa.backend.room.repository.RoomRepository;
 import com.hotelsa.backend.user.model.User;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
+import org.mockito.*;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.access.AccessDeniedException;
 
-import java.math.BigDecimal;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -39,6 +32,7 @@ class RoomServiceTest {
     @Mock private HotelRepository hotelRepository;
     @Mock private RoomRepository roomRepository;
     @Mock private RoomMapper roomMapper;
+    @Mock private AuthService authService;
     @Mock private SecurityContext securityContext;
     @Mock private Authentication authentication;
 
@@ -51,48 +45,44 @@ class RoomServiceTest {
 
     @BeforeEach
     void setUp() {
-        // Crear hotel y asignar usuario
         hotel = new Hotel();
         hotel.setId(100L);
         hotel.setName("Hotel Paradise");
 
-        User currentUser = new User();
-        currentUser.setId(1L);
-        currentUser.setUsername("admin");
-        currentUser.setHotel(hotel);
+        User user = new User();
+        user.setId(1L);
+        user.setUsername("admin");
+        user.setHotel(hotel);
+        hotel.addUser(user);
 
-        hotel.addUser(currentUser);
-
-        // Crear habitación
         room = new Room();
         room.setId(1L);
         room.setNumber("101");
         room.setHotel(hotel);
         room.setPricePerNight(100.0);
 
-        roomRequestDTO = new RoomRequestDTO();
-        roomRequestDTO.setHotelId(hotel.getId());
-        roomRequestDTO.setNumber("101");
-        roomRequestDTO.setType(RoomType.SINGLE);
-        roomRequestDTO.setFloor(1);
-        roomRequestDTO.setCapacity(2);
-        roomRequestDTO.setPricePerNight(100.0);
-        roomRequestDTO.setStatus(RoomStatus.AVAILABLE);
+        roomRequestDTO = RoomRequestDTO.builder()
+                .number("101")
+                .type(RoomType.SINGLE)
+                .floor(1)
+                .capacity(2)
+                .pricePerNight(100.0)
+                .status(RoomStatus.AVAILABLE)
+                .build();
 
-        roomResponseDTO = new RoomResponseDTO();
-        roomResponseDTO.setId(1L);
-        roomResponseDTO.setNumber("101");
+        roomResponseDTO = RoomResponseDTO.builder()
+                .id(1L)
+                .number("101")
+                .type(RoomType.SINGLE)
+                .hotelId(100L)
+                .hotelName("Hotel Paradise")
+                .build();
 
-        mockAuthenticatedUser(currentUser);
-    }
-
-    private void mockAuthenticatedUser(User user) {
-        // los stubs seguirán funcionando, solo que Mockito no se quejará si no se usan
         lenient().when(authentication.getPrincipal()).thenReturn(user);
         lenient().when(securityContext.getAuthentication()).thenReturn(authentication);
         SecurityContextHolder.setContext(securityContext);
+        when(authService.getCurrentHotelId()).thenReturn(hotel.getId());
     }
-
 
     @AfterEach
     void tearDown() {
@@ -101,76 +91,20 @@ class RoomServiceTest {
 
     // ------------------------ CREATE ------------------------
     @Test
-    void createRoom_ShouldCreateRoom_WhenValidHotel() {
-        // Mockear hotel
-        Hotel hotel = new Hotel();
-        hotel.setId(roomRequestDTO.getHotelId());
-        hotel.setName("Hotel Test");
-
-        // Mockear que el usuario actual está autenticado (si tu método getCurrentUser lo requiere)
-        User currentUser = new User();
-        currentUser.setId(1L);
-        currentUser.setHotel(hotel); // asignar hotel
-        // Suponiendo que tienes un método de utilidad para mockear usuario autenticado
-        mockAuthenticatedUser(currentUser);
-
-        // Mockear comportamiento de los mappers y repositorio
-        when(hotelRepository.findById(roomRequestDTO.getHotelId())).thenReturn(Optional.of(hotel));
+    void createRoom_ShouldCreateRoomSuccessfully() {
+        when(hotelRepository.findById(hotel.getId())).thenReturn(Optional.of(hotel));
         when(roomMapper.fromRequestDto(roomRequestDTO)).thenReturn(room);
         when(roomRepository.save(room)).thenReturn(room);
         when(roomMapper.fromEntity(room)).thenReturn(roomResponseDTO);
 
-        // Ejecutar método
         RoomResponseDTO result = roomService.createRoom(roomRequestDTO);
 
-        // Verificaciones
         assertNotNull(result);
-        assertEquals(roomResponseDTO.getId(), result.getId());
+        assertEquals(1L, result.getId());
+        assertEquals("101", result.getNumber());
         verify(roomRepository).save(room);
-        verify(hotelRepository).findById(roomRequestDTO.getHotelId());
     }
 
-
-    @Test
-    void createRoom_ShouldThrowAccessDenied_WhenOtherHotel() {
-        // Usuario autenticado
-        Hotel userHotel = new Hotel();
-        userHotel.setId(1L); // hotel del usuario
-        User currentUser = new User();
-        currentUser.setHotel(userHotel);
-        mockAuthenticatedUser(currentUser);
-
-        // DTO con hotel diferente
-        RoomRequestDTO dtoOtherHotel = new RoomRequestDTO();
-        dtoOtherHotel.setHotelId(999L);
-
-        // Mock del hotel solicitado
-        Hotel otherHotel = new Hotel();
-        otherHotel.setId(999L);
-        when(hotelRepository.findById(999L)).thenReturn(Optional.of(otherHotel));
-
-        // Debe lanzar AccessDeniedException
-        assertThrows(AccessDeniedException.class, () -> roomService.createRoom(dtoOtherHotel));
-    }
-
-    @Test
-    void createRoom_ShouldThrowHotelNotFound_WhenHotelDoesNotExist() {
-        // Usuario autenticado
-        Hotel userHotel = new Hotel();
-        userHotel.setId(1L);
-        User currentUser = new User();
-        currentUser.setHotel(userHotel);
-        mockAuthenticatedUser(currentUser);
-
-        // DTO con hotel inexistente
-        RoomRequestDTO dto = new RoomRequestDTO();
-        dto.setHotelId(999L);
-
-        // No hay mock para el hotel => Optional.empty()
-        when(hotelRepository.findById(999L)).thenReturn(Optional.empty());
-
-        assertThrows(HotelNotFoundException.class, () -> roomService.createRoom(dto));
-    }
     // ------------------------ GET ------------------------
     @Test
     void getRoomById_ShouldReturnRoom_WhenExists() {
@@ -179,64 +113,66 @@ class RoomServiceTest {
 
         RoomResponseDTO result = roomService.getRoomById(1L);
 
-        assertEquals(roomResponseDTO.getId(), result.getId());
+        assertEquals(1L, result.getId());
+        assertEquals("101", result.getNumber());
     }
 
     @Test
-    void getRoomById_ShouldThrowNotFound_WhenRoomDoesNotExist() {
+    void getRoomById_ShouldThrowNotFound_WhenDoesNotExist() {
         when(roomRepository.findById(999L)).thenReturn(Optional.empty());
 
         assertThrows(RoomNotFoundException.class, () -> roomService.getRoomById(999L));
     }
 
     @Test
-    void getRoomsByHotelId_ShouldReturnRoomsList() {
-        List<Room> rooms = Arrays.asList(room);
+    void getRoomsForCurrentHotel_ShouldReturnRoomList() {
+        List<Room> rooms = List.of(room);
         when(roomRepository.findByHotel_Id(hotel.getId())).thenReturn(rooms);
         when(roomMapper.fromEntity(any(Room.class))).thenReturn(roomResponseDTO);
 
-        List<RoomResponseDTO> result = roomService.getRoomsByHotelId(hotel.getId());
+        List<RoomResponseDTO> result = roomService.getRoomsForCurrentHotel();
 
         assertEquals(1, result.size());
+        assertEquals("101", result.get(0).getNumber());
     }
 
     // ------------------------ UPDATE ------------------------
     @Test
-    void updateRoom_ShouldUpdateRoom_WhenValidHotel() {
+    void updateRoom_ShouldUpdateRoomSuccessfully() {
         when(roomRepository.findById(1L)).thenReturn(Optional.of(room));
         when(roomRepository.save(room)).thenReturn(room);
         when(roomMapper.fromEntity(room)).thenReturn(roomResponseDTO);
 
-        RoomRequestDTO updateDto = new RoomRequestDTO();
-        updateDto.setNumber("102");
-        updateDto.setType(RoomType.DOUBLE);
-        updateDto.setFloor(1);
-        updateDto.setCapacity(2);
-        updateDto.setPricePerNight(150.0);
-        updateDto.setStatus(RoomStatus.AVAILABLE);
+        RoomRequestDTO updateDTO = RoomRequestDTO.builder()
+                .number("102")
+                .type(RoomType.DOUBLE)
+                .floor(2)
+                .capacity(3)
+                .pricePerNight(150.0)
+                .status(RoomStatus.AVAILABLE)
+                .build();
 
-        RoomResponseDTO result = roomService.updateRoom(1L, updateDto);
+        RoomResponseDTO result = roomService.updateRoom(1L, updateDTO);
 
         assertEquals("102", room.getNumber());
         verify(roomRepository).save(room);
+        assertEquals(1L, result.getId());
     }
 
     @Test
     void updateRoom_ShouldThrowAccessDenied_WhenOtherHotel() {
-        RoomRequestDTO updateDto = new RoomRequestDTO();
-        Room roomOtherHotel = new Room();
         Hotel otherHotel = new Hotel();
         otherHotel.setId(999L);
-        roomOtherHotel.setHotel(otherHotel);
+        room.setHotel(otherHotel);
 
-        when(roomRepository.findById(1L)).thenReturn(Optional.of(roomOtherHotel));
+        when(roomRepository.findById(1L)).thenReturn(Optional.of(room));
 
-        assertThrows(AccessDeniedException.class, () -> roomService.updateRoom(1L, updateDto));
+        assertThrows(AccessDeniedException.class, () -> roomService.updateRoom(1L, roomRequestDTO));
     }
 
     // ------------------------ DELETE ------------------------
     @Test
-    void deleteRoom_ShouldSoftDelete_WhenValidHotel() {
+    void deleteRoom_ShouldSoftDeleteSuccessfully() {
         when(roomRepository.findById(1L)).thenReturn(Optional.of(room));
         when(roomRepository.save(room)).thenReturn(room);
 
@@ -248,12 +184,11 @@ class RoomServiceTest {
 
     @Test
     void deleteRoom_ShouldThrowAccessDenied_WhenOtherHotel() {
-        Room roomOtherHotel = new Room();
         Hotel otherHotel = new Hotel();
         otherHotel.setId(999L);
-        roomOtherHotel.setHotel(otherHotel);
+        room.setHotel(otherHotel);
 
-        when(roomRepository.findById(1L)).thenReturn(Optional.of(roomOtherHotel));
+        when(roomRepository.findById(1L)).thenReturn(Optional.of(room));
 
         assertThrows(AccessDeniedException.class, () -> roomService.deleteRoom(1L));
     }
